# maileroo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  dist-workspace.toml  docker-compose.dev.yml
.github/: RELEASING.md
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: docker-compose.yml
migrations/postgres/: 20260522000000_init.sql  20260525000000_add_dkim_to_domains.sql  20260526000000_add_outbound_queue.sql  20260601000000_add_attachments.sql
migrations/sqlite/: 20260522000000_init.sql  20260525000000_add_dkim_to_domains.sql  20260526000000_add_outbound_queue.sql  20260601000000_add_attachments.sql
src/: config.rs  crypto.rs  disposable_domains.rs  dns.rs  fs.rs  lib.rs  main.rs  server.rs
src/db/: aliases.rs  api_keys.rs  attachments.rs  domains.rs  mod.rs  queue.rs  replies.rs  reply_mappings.rs  send_email.rs  sent_emails.rs  sqlite_tests.rs  users.rs
src/inbound/: acceptor.rs  blocklist.rs  mod.rs  parser.rs  protocol.rs  rate_limit.rs
src/outbound/: dkim.rs  mime.rs  mod.rs  queue.rs  relay.rs  srs.rs
src/web/: admin_handlers.rs  alias_api.rs  api.rs  api_auth.rs  auth.rs  autotls.rs  dashboard.rs  dkim.rs  email_body.rs  handlers.rs  i18n.rs  mod.rs  names.rs  replies.rs  send_email.rs
templates/: admin_users.html  aliases.html  api_keys.html  base.html  compose_modal.html  dashboard.html  dkim_modal.html  domains.html  email_detail.html  email_reply_row.html  email_row.html  landing.html  login.html  modal.html  password_input.html  register.html  suggestion_list.html  toast.html
tests/: acceptor_tests.rs  autotls_tests.rs  dashboard_tests.rs  dkim_tests.rs  inbound_tests.rs  queue_tests.rs  sqlite_db_tests.rs
tests/common/: mod.rs
